--- a/_layouts/masonry.html
+++ b/_layouts/masonry.html
@@ -275,12 +275,13 @@
 <body style="min-height:100vh;">
   <div class="page-center-wrap" style="display:flex;min-height:100vh;width:100vw;">
     <div class="page-container" style="display:flex;gap:1rem;width:100vw;margin:2rem;">
-      {% include components/sidebar.html %}
       <div class="container" id="main-container" style="flex:1 0 auto;display:flex;flex-direction:column;min-height:0;height:calc(100vh - 4rem);max-height:100vh;">
         <main class="content content-{{ page.id | default: page.title | replace: ' ', '-' | slice: 0, 5 }}" id="main-content" style="display: block;flex:1 0 auto;">
           {{ content }}
         </main>
       </div>
+      {% include components/minimap.html %}
+      {% include components/sidebar.html %}
     </div>
   </div>
   
